# Chess

./: .gitignore  CMakeLists.txt
src/: game.cpp  game.h  main.cpp  model.cpp  model.h  moves.cpp  pch.h
src/MCTS/: algo.cpp  algo.h
src/Pieces/: bishop.h  king.h  knight.h  pawn.h  piece.cpp  piece.h  queen.h  rook.h
